<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="16dp"
    android:padding="16dp"
    android:layout_marginStart="26dp"
    android:layout_marginEnd="26dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="#000">

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3274a6">

        <LinearLayout
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#d3f0f6">

            <TextView
                android:id="@+id/surah_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_1"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/bg_circle"
                android:gravity="center"/>


            <TextView
                android:id="@+id/arabic_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fatiah"
                android:textColor="#3274a6"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/english_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/fatiah2"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/total_aya"
                android:textColor="@color/black"
                android:text="@string/_7_ayah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>



    </LinearLayout>
</androidx.cardview.widget.CardView>