<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    tools:context=".activities.SurahDetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#157784">

            <TextView
                android:id="@+id/surah_name"
                android:text="@string/fatiha2"
                android:textColor="#FFF"
                android:textSize="28sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/translation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/surah_name"
                android:text="@string/the_opening2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Type"
                android:layout_below="@id/translation"
                android:text="@string/meccan_7_aya2"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear"
        android:orientation="horizontal"
        android:layout_below="@id/card_view"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/surah_detail_rv"
        android:layout_below="@id/linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp" />

</RelativeLayout>